web/styles/compose.css
#compose_buttons {
    text-align: right;
    display: flex;
    flex-direction: row;
    align-items: center;

    .new_message_button {
        margin-left: 4px;

        .button.small {
            font-size: 1em;
            padding: 3px 10px;
            vertical-align: middle;
        }

        .compose_mobile_button {
            & span {
                font-size: 1.2em !important;
                font-weight: 400;
                line-height: 1em;
            }
        }
    }

    .reply_button_container {
        flex: 1;
        min-width: 0;
        margin-left: 0;

        .compose_reply_button {
            width: 100%;
            text-align: left;
            overflow: hidden;
            white-space: nowrap;
            text-overflow: ellipsis;
        }
    }

    .mobile_button_container {
        @media (width >= $sm_min) {
            display: none;
        }
    }

    .stream_button_container,
    .private_button_container {
        @media (width < $sm_min) {
            display: none;
        }
    }
}

/* Main geometry for this element is in zulip.css */
#compose-content {
    border-top: 1px solid hsl(0deg 0% 0% / 7%);
    transition: background-color 200ms linear;
    padding: 4px 4px 8px;
    border-left: 1px solid hsl(0deg 0% 93%);
    border-right: 1px solid hsl(0deg 0% 93%);
    height: 100%;
    display: flex;
    flex-flow: column;
    box-sizing: border-box;
}

.message_comp {
    display: none;
    padding: 5px 10px 0 5px;
}

.autocomplete_secondary {
    opacity: 0.8;
}

.active .autocomplete_secondary {
    opacity: 1;
}

.narrow_to_compose_recipient_current_view_help {
    margin: 0;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.compose_table {
    height: 100%;
    display: flex;
    flex-flow: column;

    .stream-selection-header-colorblock {
        &.message_header_private_message {
            border-radius: 3px 0 0 3px;
            border-bottom: 0;
            background-color: hsl(0deg 0% 27%);
        }
    }

    .right_part,
    #compose-stream-recipient {
        padding: 0;
        display: flex;
        align-items: center;
        flex: 1;

        .fa-angle-right {
            font-size: 0.9em;
            -webkit-text-stroke: 0.05em;
            position: relative;
            margin: 0 5px;
        }

        & a.narrow_to_compose_recipients {
            background: transparent;
            font-size: 18px;
            padding: 1px;
            line-height: 20px;
            opacity: 0.7;
            border: 0;
            margin-left: 3px;
            text-decoration: none;
            color: inherit;

            &:hover {
                opacity: 1;
            }
        }
    }

    .pm_recipient {
        margin-left: 5px;
        display: flex;
        align-items: center;
        width: 100%;
    }

    #compose-private-recipient .to_text {
        vertical-align: middle;

        font-weight: 600;
    }

    .message_header {
        background: none;
        background-color: hsl(0deg 0% 92%);
        border: none;
        border-radius: 0;
        box-shadow: none !important;
    }

    .messagebox {
        box-shadow: none !important;
    }
}

#send_message_form {
    margin: 0;
    height: 100%;

    .messagebox-wrapper {
        flex: 1;
    }

    .messagebox {
        /* normally 5px 14px; pull in the right and bottom a bit */
        cursor: default;
        padding: 0;
        background: none;
        box-shadow: none;
        border: none;
        height: 100%;
        display: flex;
        flex-flow: column;
    }

    .message_content {
        margin-right: 0;
    }
}

#below-compose-content {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin-top: 6px;
    margin-bottom: -2px;

    .compose_bottom_top_container {
        display: flex;
    }

    .compose_bottom_bottom_container {
        display: flex;
        justify-content: space-between;
    }
}

#compose_limit_indicator {
    margin-right: 8px;
    font-size: 12px;
    color: hsl(39deg 100% 50%);
    align-self: center;

    &.over_limit {
        color: hsl(0deg 76% 65%);
        font-weight: bold;
    }
}

#compose {
    position: fixed;
    bottom: 0;
    left: 0;
    z-index: 4;
    width: 100%;

    background-color: hsl(0deg 0% 100%);
}

#compose-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    /* This should match the value for .app-main */
    max-width: 1400px;
    margin: auto;
}

#compose_top {
    display: flex;
    justify-content: space-between;
    padding-bottom: 5px;
}

#compose_top_right {
    display: flex;
    align-items: center;
    margin-bottom: auto;

    & button {
        background: transparent;
        color: inherit;
        font-size: 15px;
        font-weight: normal;
        line-height: 20px;
        opacity: 0.7;
        border: 0;
        padding: 0;
        margin-left: 4px;
        vertical-align: unset;
        text-shadow: none;

        &:hover {
            opacity: 1;
        }
    }
}

.collapse_composebox_button,
#compose_close {
    display: none;
}
/* ... */

